feat: speech2text plugin : continuous speech recognition

--- a/plugin-btn-speech2text/build.gradle
+++ b/plugin-btn-speech2text/build.gradle
@@ -3,3 +3,7 @@ plugins {
 }
 
 packageName = "org.eu.thedoc.zettelnotes.buttons.speech2text"
+
+dependencies {
+    implementation group: 'com.alphacephei', name: 'vosk-android', version: '0.3.47'
+}
