--- a/plugin-btn-speech2text/src/main/AndroidManifest.xml
+++ b/plugin-btn-speech2text/src/main/AndroidManifest.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
        android:allowBackup="true"
        android:icon="@mipmap/ic_launcher"
@@ -11,6 +15,17 @@
 
         <activity
            android:name=".RecognizerActivity"
+           android:exported="true"
+           android:launchMode="singleTask">
+            <intent-filter>
+                <action android:name="org.eu.thedoc.zettelnotes.intent.buttons.speech_to_text" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <activity
+           android:name=".ContinuousRecognizerActivity"
+           android:enabled="false"
            android:launchMode="singleTask"
            android:exported="true">
             <intent-filter>
