--- a/plugin-btn-chat-ai/build.gradle
+++ b/plugin-btn-chat-ai/build.gradle
@@ -18,4 +18,5 @@ dependencies {
     implementation libs.chat.gpt.api
     implementation libs.okhttp
     implementation libs.cardviewx
+    implementation libs.okhttp.logging
 }
