--- a/plugin-btn-speech2text/build.gradle
+++ b/plugin-btn-speech2text/build.gradle
@@ -5,5 +5,5 @@ plugins {
 packageName = "org.eu.thedoc.zettelnotes.buttons.speech2text"
 
 dependencies {
-    implementation group: 'com.alphacephei', name: 'vosk-android', version: '0.3.47'
+    implementation libs.vosk
 }
