--- a/plugin-btn-anki/src/main/AndroidManifest.xml
+++ b/plugin-btn-anki/src/main/AndroidManifest.xml
@@ -20,6 +20,10 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.INFO" />
             </intent-filter>
+            <intent-filter>
+                <action android:name="org.eu.thedoc.zettelnotes.intent.buttons.anki" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
         </activity>
 
     </application>
