--- a/plugin-btn-anki/src/main/AndroidManifest.xml
+++ b/plugin-btn-anki/src/main/AndroidManifest.xml
@@ -11,7 +11,11 @@
 
         <activity
            android:name=".MainActivity"
-           android:exported="true">
+           android:exported="true"
+           android:excludeFromRecents="true"
+           android:noHistory="true"
+           android:launchMode="singleTask"
+           android:theme="@style/AppThemeTransparent">
             <intent-filter>
                 <action android:name="org.eu.thedoc.zettelnotes.intent.buttons" />
                 <category android:name="android.intent.category.DEFAULT" />
