--- a/plugin-btn-chat-ai/build.gradle
+++ b/plugin-btn-chat-ai/build.gradle
@@ -19,8 +19,10 @@ dependencies {
     implementation libs.okhttp
     implementation libs.cardviewx
     implementation libs.okhttp.logging
+    implementation libs.gson
 
     implementation(libs.bundles.markwon) {
         exclude group: 'org.jetbrains', module: 'annotations-java5'
+        exclude group: 'io.noties', module: 'prism4j'
     }
 }
