feat: ai chat : accept text from any app
Signed-off-by: Rohit <rohitsharma.royal@gmail.com>

--- a/plugin-btn-chat-ai/src/main/AndroidManifest.xml
+++ b/plugin-btn-chat-ai/src/main/AndroidManifest.xml
@@ -27,6 +27,22 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+
+        <activity
+           android:name=".ShareActivity"
+           android:excludeFromRecents="true"
+           android:exported="true"
+           android:label="AI Chat"
+           android:launchMode="singleTop"
+           android:noHistory="true"
+           android:theme="@style/AppThemeTransparent">
+            <intent-filter>
+                <action android:name="android.intent.action.PROCESS_TEXT" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data android:mimeType="text/plain" />
+            </intent-filter>
+        </activity>
+
         <activity
            android:name=".SettingsActivity"
            android:parentActivityName=".ChatActivity"
